--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
